--- a/src/style.css
+++ b/src/style.css
@@ -949,9 +949,9 @@ button{
 }
 
 .no-tasks-img-week{
-  width: 370px;
-  height: 370px;
-  background-image: var(--no-sections-image);
+  width: 300px;
+  height: 300px;
+  background-image: url("./img/this-week-no-tasks.png");
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -1324,20 +1324,21 @@ button{
   }
 
   .no-tasks-img{
-    width: 80%;
+    width: 70%;
     margin-bottom: 25px;
   }
 
   .no-tasks-img-today{
-    width: 90%;
+    width: 70%;
   }
 
   .no-tasks-img-week{
-    width: 100%;
+    width: 70%;
+    margin-bottom: 0px;
   }
 
   .no-sections-img{
-    width: 80%;
+    width: 70%;
     margin-bottom: 0px;
   }
 
