--- a/src/style.css
+++ b/src/style.css
@@ -863,6 +863,7 @@ button{
   width: 18px;
   height: 18px;
   cursor: pointer;
+  accent-color: var(--secondary-color);
 }
 
 .task-button-title{
@@ -1170,6 +1171,7 @@ button{
   width: 20px;
   height: 20px;
   cursor: pointer;
+  accent-color: var(--secondary-color);
 }
 
 .dark-theme-icon{
