--- a/src/style.css
+++ b/src/style.css
@@ -47,6 +47,7 @@
   --yellow-color: #ffc300;
 
   --add-task-icon: url("./img/add-task.svg");
+  --add-task-icon-disabled: url("./img/add-task-disabled.svg");
   --dark-theme-icon: url("./img/dark-theme-icon.svg");
 
   --today-no-tasks-image: url("./img/today-no-tasks-dark-theme.png");
@@ -648,7 +649,7 @@ body {
 }
 
 .add-task-btn-disabled{
-  background-image: url(./img/add-task-disabled.svg) !important;
+  background-image: var(--add-task-icon-disabled) !important;
 }
 
 .add-task-container {
@@ -852,7 +853,7 @@ button{
 
 .disabled-click{
   pointer-events: none;
-  color: var(--hover)!important;
+  color: var(--inactive)!important;
 }
 
 .invalid-input{
@@ -863,7 +864,7 @@ button{
   width: 18px;
   height: 18px;
   cursor: pointer;
-  accent-color: var(--secondary-color);
+  accent-color: #269c83;
 }
 
 .task-button-title{
