Dark theme colors update

--- a/src/style.css
+++ b/src/style.css
@@ -525,7 +525,7 @@ body {
 
 .section-title {
   font-size: 17rem;
-  color: var(--secondary-color);
+  color: #10a885;
   font-family: 'TTBold';
 }
 
