--- a/src/style.css
+++ b/src/style.css
@@ -659,6 +659,7 @@ body {
   cursor: pointer;
   width: 100px;
   color: var(--text-dark);
+  margin-top: 20px;
 }
 
 .add-task-container:hover {
@@ -861,10 +862,45 @@ button{
 }
 
 .checkbox{
+  position: relative;
   width: 18px;
   height: 18px;
   cursor: pointer;
-  accent-color: #269c83;
+  appearance: none;
+  background-color: transparent;
+  border-radius: 4px;
+  margin-right: 5px;
+}
+
+.checkbox::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: 1px solid var(--inactive);
+  border-radius: 4px;
+  transition: background-color 0.3s, transform 0.3s;
+}
+
+.checkbox::after {
+  content: "✔";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+  color: white;
+}
+
+.checkbox:checked::before {
+  background-color: #269c83;
+  border: 1px solid #269c83;
+}
+
+.checkbox:checked::after {
+  opacity: 1;
 }
 
 .task-button-title{
@@ -1441,6 +1477,14 @@ button{
 
   .no-tasks-message{
     border: 3px solid var(--hover);
+  }
+  
+  .add-task-container{
+    margin-top: 28px;
+  }
+
+  .checkbox{
+    margin-right: 4px;
   }
 }
 
